# dot

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
src/gitdot/: __init__.py  amend.py  branch.py  branch_cleanup.py  cli.py  discard.py  dotdir.py  errors.py  git.py  ignore.py  pull.py  push.py  revive.py  save.py  saving.py  settings.py  start.py  switch.py  sync.py  undo.py
tests/: conftest.py  test_amend.py  test_branch_cleanup.py  test_discard.py  test_dotdir.py  test_errors.py  test_git.py  test_ignore.py  test_passthrough.py  test_pull.py  test_push.py  test_save.py  test_start.py  test_switch.py  test_sync.py  test_undo.py
