[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gitdot"
version = "0.1.0"
description = "A beginner-friendly CLI wrapper over git"
requires-python = ">=3.10"
dependencies = ["click>=8.0"]

[project.scripts]
dot = "gitdot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
